Home page filters are done. Additinal filters in the showroom are complete as well. Slight glitch in the Price From - To filter.

--- a/FamilyAuto/Views/Home/Index.cshtml
+++ b/FamilyAuto/Views/Home/Index.cshtml
@@ -8,70 +8,70 @@
         <h1>Family Auto</h1>
         <br />
     <button class="btn btn-info btn-lg" data-toggle="collapse" data-target="#VehicleType">Choose Vehicle Type</button>
-    <div class="container collapse" id="VehicleType">
-        <div class="row">
-            <div class="col-lg-2 col-md-2">
-                <a href="#" class="thumbnail">
+      <div class="container collapse" id="VehicleType">
+        <div class="row"><br />
+            <div class="col-lg-2">
+                <a href="~/Vehicle/Showroom?type=AWD" class="thumbnail">
                     <img src="~/Images/TypeIcons/4wd.PNG" /> 4WD
                 </a>
             </div>
-            <div class="col-lg-2 col-md-2">
-                <a href="#" class="thumbnail">
+            <div class="col-lg-2">
+                <a href="~/Vehicle/Showroom?type=Commercial" class="thumbnail">
                     <img src="~/Images/TypeIcons/Commercial.PNG" /> Commercial
                 </a>
             </div>
             <div class="col-lg-2">
-                <a href="#" class="thumbnail">
-                    <img src="~/Images/TypeIcons/Convertible.PNG" />
+                <a href="~/Vehicle/Showroom?type=Convertible" class="thumbnail">
+                    <img src="~/Images/TypeIcons/Convertible.PNG" /> Convertible
                 </a>
             </div>
             <div class="col-lg-2">
-                <a href="#" class="thumbnail">
-                    <img src="~/Images/TypeIcons/Coupe.PNG" />
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-2">
-                <a href="#" class="thumbnail">
-                    <img src="~/Images/TypeIcons/Hatchback.PNG" />
-                </a>
-            </div>
-            <div class="col-lg-2">
-                <a href="#" class="thumbnail">
-                    <img src="~/Images/TypeIcons/Hybrid.PNG" />
-                </a>
-            </div>
-            <div class="col-lg-2">
-                <a href="#" class="thumbnail">
-                    <img src="~/Images/TypeIcons/Luxury.PNG" />
-                </a>
-            </div>
-            <div class="col-lg-2">
-                <a href="#" class="thumbnail">
-                    <img src="~/Images/TypeIcons/Minivan.PNG" />
+                <a href="~/Vehicle/Showroom?type=Coupe" class="thumbnail">
+                    <img src="~/Images/TypeIcons/Coupe.PNG" /> Coupe
                 </a>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-2">
-                <a href="#" class="thumbnail">
-                    <img src="~/Images/TypeIcons/Sedan.PNG" />
+                <a href="~/Vehicle/Showroom?type=Hatchback" class="thumbnail">
+                    <img src="~/Images/TypeIcons/Hatchback.PNG" /> Hatchback
                 </a>
             </div>
             <div class="col-lg-2">
-                <a href="#" class="thumbnail">
-                    <img src="~/Images/TypeIcons/SUV.PNG" />
+                <a href="~/Vehicle/Showroom?type=Hybrid" class="thumbnail">
+                    <img src="~/Images/TypeIcons/Hybrid.PNG" /> Hybrid
                 </a>
             </div>
             <div class="col-lg-2">
-                <a href="#" class="thumbnail">
-                    <img src="~/Images/TypeIcons/Truck.PNG" />
+                <a href="~/Vehicle/Showroom?type=Luxury" class="thumbnail">
+                    <img src="~/Images/TypeIcons/Luxury.PNG" /> Luxury
                 </a>
             </div>
             <div class="col-lg-2">
-                <a href="#" class="thumbnail">
-                    <img src="~/Images/TypeIcons/Wagon.PNG" />
+                <a href="~/Vehicle/Showroom?type=Minivan" class="thumbnail">
+                    <img src="~/Images/TypeIcons/Minivan.PNG" /> Minivan
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-2">
+                <a href="~/Vehicle/Showroom?type=Sedan" class="thumbnail">
+                    <img src="~/Images/TypeIcons/Sedan.PNG" /> Sedan
+                </a>
+            </div>
+            <div class="col-lg-2">
+                <a href="~/Vehicle/Showroom?type=SUV" class="thumbnail">
+                    <img src="~/Images/TypeIcons/SUV.PNG" /> SUV
+                </a>
+            </div>
+            <div class="col-lg-2">
+                <a href="~/Vehicle/Showroom?type=Truck" class="thumbnail">
+                    <img src="~/Images/TypeIcons/Truck.PNG" /> Truck
+                </a>
+            </div>
+            <div class="col-lg-2">
+                <a href="~/Vehicle/Showroom?type=Wagon" class="thumbnail">
+                    <img src="~/Images/TypeIcons/Wagon.PNG" /> Wagon
                 </a>
             </div>
         </div>
