Done some work on submitting the values for the vehicle subtables. I still need to work on the picture uploads. Last commit for Skopje branch. Going back to Prague tomorrow.

--- a/FamilyAuto/Views/Vehicle/Details.cshtml
+++ b/FamilyAuto/Views/Vehicle/Details.cshtml
@@ -183,10 +183,10 @@
                 <td>@Html.DisplayFor(model => model.VehicleFeature.AirConditioning)</td>
                 <td>@Html.DisplayFor(model => model.VehicleFeature.InteriorFeatures)</td>
                 <td>@Html.DisplayFor(model => model.VehicleFeature.Security)</td>
-                @*<td>@Html.DisplayFor(model => model.VehicleFeature.Airbags)</td>*@
-                @if (Model.VehicleFeature.Airbags == true)
+                <td>@Html.DisplayFor(model => model.VehicleFeature.Airbags)</td>
+                @*@if (Model.VehicleFeature.Airbags == true)
                 { <td>YES</td>}
-                else { <td>NO</td>}
+                else { <td>NO</td>}*@
                 <td>@Html.DisplayFor(model => model.VehicleFeature.ParkingSensor)</td>
                 <td>@Html.DisplayFor(model => model.VehicleFeature.Sports)</td>
                 <td>@Html.DisplayFor(model => model.VehicleFeature.InteriorMaterial)</td>
