--- a/FamilyAuto/Views/Vehicle/Create.cshtml
+++ b/FamilyAuto/Views/Vehicle/Create.cshtml
@@ -111,7 +111,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.VehicleHistory.Warranty, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.CheckBoxFor(model => model.VehicleHistory.Warranty, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.VehicleHistory.Warranty, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.VehicleHistory.Warranty, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -273,6 +273,10 @@
                     </div>
 
                 </div>
+
+                @*<div class="form-group">
+                    <input type="file" name="file" multiple="multiple" />
+                </div>*@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
