Done some quick fixes here and there. Implemented an option to merge customer record with registered user. I will attempt to create a sorting and search option to the CMS view.

--- a/FamilyAuto/Views/Vehicle/Edit.cshtml
+++ b/FamilyAuto/Views/Vehicle/Edit.cshtml
@@ -11,6 +11,9 @@
 {
     @Html.AntiForgeryToken()
 
+    @*@Html.HiddenFor(model => model.Id)
+    @Html.HiddenFor(model => model.VehicleFeature.Id)*@
+
     <div class="container">
         <div class="form-horizontal">
             <hr />
