--- a/FamilyAuto/Views/IMS/Statistics.cshtml
+++ b/FamilyAuto/Views/IMS/Statistics.cshtml
@@ -7,9 +7,9 @@
 <h2>Statistics</h2>
 <br />
 
-<h4>@Html.ActionLink("Vehicles Not Sold: " + (string)ViewBag.VehiclesSold, "Index", new { Controller = "Vehicle" }, new { @class = "" })</h4>
+<h4>@Html.ActionLink("Vehicles Sold: " + (string)ViewBag.VehiclesSold, "Index", new { Controller = "Vehicle" }, new { @class = "" })</h4>
 
-<h4>@Html.ActionLink("Vehicles Sold: " + (string)ViewBag.VehiclesNotSold, "Index", new { Controller = "SoldVehicles" }, new { @class = "" })</h4>
+<h4>@Html.ActionLink("Vehicles On Sale: " + (string)ViewBag.VehiclesNotSold, "Index", new { Controller = "SoldVehicles" }, new { @class = "" })</h4>
 
 <h4>@Html.ActionLink("Registered Customers: " + (string)ViewBag.RegisteredCustomers, "Index", new { Controller = "User" }, new { @class = "" })</h4>
 
