Implemented contact form in Home/Contacts that uses a newly created gmail account to send messages from customers to the company's email.

--- a/FamilyAuto/Views/Vehicle/Showroom.cshtml
+++ b/FamilyAuto/Views/Vehicle/Showroom.cshtml
@@ -63,7 +63,8 @@
 <div class="filterStyle">
     <h3>FILTERS:</h3>
     <br />
-    <a href="#" class="showAll">Show All</a>
+    @Html.ActionLink("Show All", "Showroom")
+    @*<a href="#" class="showAll">Show All</a>*@
     <br />
 
     @*<h5>Vehicle Type</h5>
