--- a/FamilyAuto/Views/Home/Contact.cshtml
+++ b/FamilyAuto/Views/Home/Contact.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model FamilyAuto.Models.EmailForm
+
+@{
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
@@ -17,7 +19,42 @@
 </address>
 <br /><br /><br />
 
-<form class="form-horizontal">
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    <h4>Send your inquiry.</h4>
+    <hr />
+    <form class="form-horizontal">
+        <div class="form-group">
+            @Html.LabelFor(m => m.FromName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.FromName, new { @class = "form-control", @placeholder = "Name"})
+                @Html.ValidationMessageFor(m => m.FromName)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.FromEmail, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.FromEmail, new { @class = "form-control", @placeholder = "Email" })
+                @Html.ValidationMessageFor(m => m.FromEmail)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Message, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(m => m.Message, new { @class = "form-control", @rows="5" })
+                @Html.ValidationMessageFor(m => m.Message)
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" class="btn btn-default" value="Send" />
+            </div>
+        </div>
+    </form>
+}
+
+@*<form class="form-horizontal">
     <div class="form-group">
         <label for="inputName" class="col-sm-2 control-label">Name</label>
         <div class="col-sm-10">
@@ -41,4 +78,8 @@
             <button type="submit" class="btn btn-default">Send</button>
         </div>
     </div>
-</form>
+</form>*@
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
