Implemented a contact form in the details view where the customer can directly inquire about a vehicle which will generate an email with the vehicle ID in the subject line.

--- a/FamilyAuto/Views/Vehicle/Details.cshtml
+++ b/FamilyAuto/Views/Vehicle/Details.cshtml
@@ -195,6 +195,8 @@
     </table>
 </div>
 
+@Html.Partial("_PartialVehicleContact", new FamilyAuto.Models.EmailForm())
+
 
 <script type="text/javascript">
     $(document).ready(function () {
