--- a/FamilyAuto/Views/IMS/Index.cshtml
+++ b/FamilyAuto/Views/IMS/Index.cshtml
@@ -18,7 +18,7 @@
     </div>
     <div class=col-md-4>
         <h4>Vehicle overview</h4>
-        @Html.ActionLink("Manage Vehicle Sales", "Create", new { Controller = "SoldVehicles" }, new { @class = "btn btn-primary" })
+        @Html.ActionLink("Manage Vehicle Sales", "Index", new { Controller = "SoldVehicles" }, new { @class = "btn btn-primary" })
     </div>
 </div>
 <br />
