--- a/FamilyAuto/Views/Vehicle/Edit.cshtml
+++ b/FamilyAuto/Views/Vehicle/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit Attributes for Vehicle Number @Html.DisplayFor(model => model.Id)</h2>
+<h2>Edit Attributes for Vehicle ID - @Html.DisplayFor(model => model.Id)</h2>
 
 
 @using (Html.BeginForm())
@@ -280,7 +280,7 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
+                        <input type="submit" value="Save Changes" class="btn btn-primary" />
                     </div>
                 </div>
 
