--- a/FamilyAuto/Views/Home/Services.cshtml
+++ b/FamilyAuto/Views/Home/Services.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Services";
 }
 
-<h2>Services</h2>
+<h2>Services on offer</h2>
 
 <div class="row">
     <div class="col-md-8">
         @foreach (var n in Model)
         {
             <div class="col-md-8">
-                <p>@Html.DisplayFor(item => n.DateUploaded)</p>
+                @*<p>@Html.DisplayFor(item => n.DateUploaded)</p>*@
                 <h4>@Html.DisplayFor(item => n.ArticleTitle)</h4>
                 <p>@Html.DisplayFor(item => n.ArticleDescription)</p>
                 <hr />
