--- a/FamilyAuto/Views/SoldVehicles/Create.cshtml
+++ b/FamilyAuto/Views/SoldVehicles/Create.cshtml
@@ -81,3 +81,9 @@
 </div>
 
 @Html.HiddenFor(model => model.DateCreated)
+
+<script src="//cdn.jsdelivr.net/webshim/1.14.5/polyfiller.js"></script>
+<script>
+    webshims.setOptions('forms-ext', {types: 'date'});
+webshims.polyfill('forms forms-ext');
+</script>
