--- a/FamilyAuto/Views/Vehicle/Create.cshtml
+++ b/FamilyAuto/Views/Vehicle/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Add Vehicle";
 }
 
-<h2>Create</h2>
+<h2>Create New Vehicle</h2>
 
 
 @using (Html.BeginForm("Create", "Vehicle", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -219,7 +219,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.VehicleFeature.AirConditioning, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.CheckBoxFor(model => model.VehicleFeature.AirConditioning, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.VehicleFeature.AirConditioning, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.VehicleFeature.AirConditioning, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -243,7 +243,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.VehicleFeature.Airbags, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.CheckBoxFor(model => model.VehicleFeature.Airbags, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.VehicleFeature.Airbags, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.VehicleFeature.Airbags, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -251,7 +251,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.VehicleFeature.ParkingSensor, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.CheckBoxFor(model => model.VehicleFeature.ParkingSensor, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.VehicleFeature.ParkingSensor, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.VehicleFeature.ParkingSensor, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -259,7 +259,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.VehicleFeature.Sports, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.CheckBoxFor(model => model.VehicleFeature.Sports, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.VehicleFeature.Sports, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.VehicleFeature.Sports, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -275,7 +275,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.Label("photo", new { @class = "control-label col-md-2" })
+                    @Html.Label("Add pictures", new { @class = "control-label col-md-2" })
                     <input type="file" name="photo" multiple="multiple" />
                 </div>
 
