--- a/FamilyAuto/Views/Vehicle/Delete.cshtml
+++ b/FamilyAuto/Views/Vehicle/Delete.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete the following vehicle?</h3>
 <div>
-    <h4>Vehicle</h4>
+    <h2>Vehicle ID - @Html.DisplayFor(model => model.Id)</h2>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -97,7 +97,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
