--- a/FamilyAuto/Views/Vehicle/Showroom.cshtml
+++ b/FamilyAuto/Views/Vehicle/Showroom.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="page-header">
-    <h1>SHOWROOM</h1>
+    <h1>Family Auto SHOWROOM</h1>
 </div>
 
 <div class="source-content" style="width: 75%; float: left">
