--- a/FamilyAuto/Views/Vehicle/_PartialVehicleContact.cshtml
+++ b/FamilyAuto/Views/Vehicle/_PartialVehicleContact.cshtml
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.vID, new { @class = "col-md-2 control-label" })
+                @*@Html.LabelFor(m => m.vID, new { @class = "col-md-2 control-label" })*@
                 <div class="col-md-10">
                     @Html.TextBoxFor(m => m.vID, new { @class = "form-control hidden", @Value = int.Parse(vehID) })
                     @Html.ValidationMessageFor(m => m.vID)
