--- a/FamilyAuto/Views/IMS/Index.cshtml
+++ b/FamilyAuto/Views/IMS/Index.cshtml
@@ -8,13 +8,14 @@
 
 <div class="row">
     <div class=col-md-4>
-        <h4>Maintain Customers and Suppliers</h4>
+        <h4>Maintain Staff, Customers and Suppliers</h4>
+        @Html.ActionLink("Manage Staff", "Index", new { Controller = "Staff" }, new { @class = "btn btn-primary" })
         @Html.ActionLink("Manage Customers", "Index", new { Controller = "User" }, new { @class = "btn btn-primary" })
         @Html.ActionLink("Manage Suppliers", "Index", new { Controller = "Supplier" }, new { @class = "btn btn-primary" })
     </div>
     <div class=col-md-4>
-        <h4>Manage News and Services</h4>
-        @Html.ActionLink("Manage Articles", "Index", new { Controller = "Article" }, new { @class = "btn btn-primary" })
+        <h4>Maintain Services Ordered</h4>
+        @Html.ActionLink("Manage Services Ordered", "Index", new { Controller = "ServiceOrder" }, new { @class = "btn btn-primary" })
     </div>
     <div class=col-md-4>
         <h4>Vehicle overview</h4>
