just minor cosmetic improvement to the table representations in the views.

--- a/FamilyAuto/Views/Home/Contact.cshtml
+++ b/FamilyAuto/Views/Home/Contact.cshtml
@@ -22,7 +22,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    <h4>Send your inquiry.</h4>
+    <h4>Send us your inquiry.</h4>
     <hr />
     <form class="form-horizontal">
         <div class="form-group">
