--- a/FamilyAuto/Views/Article/Create.cshtml
+++ b/FamilyAuto/Views/Article/Create.cshtml
@@ -25,7 +25,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ArticleDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.ArticleDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.ArticleDescription, 6, 0, htmlAttributes: new { @class = "form-control" } )
                 @Html.ValidationMessageFor(model => model.ArticleDescription, "", new { @class = "text-danger" })
             </div>
         </div>
