--- a/FamilyAuto/Views/User/Index.cshtml
+++ b/FamilyAuto/Views/User/Index.cshtml
@@ -9,6 +9,15 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+@using (Html.BeginForm())
+{
+    <p>
+        Search: @Html.TextBox("SearchString")
+        <input type="submit" value="Search" class="btn btn-sm btn-default" />
+    </p>
+}
+
 <table class="table table-striped table-hover">
     <tr>
         <th>
