--- a/FamilyAuto/Views/Article/Index.cshtml
+++ b/FamilyAuto/Views/Article/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Manage News and Services";
 }
 
-<h2>Index</h2>
+<h2>News and Services</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
