--- a/FamilyAuto/Views/Home/Services.cshtml
+++ b/FamilyAuto/Views/Home/Services.cshtml
@@ -5,18 +5,30 @@
 }
 
 <h2>Services on offer</h2>
-
-<div class="row">
-    <div class="col-md-8">
-        @foreach (var n in Model)
-        {
-            <div class="col-md-8">
-                @*<p>@Html.DisplayFor(item => n.DateUploaded)</p>*@
-                <h4>@Html.DisplayFor(item => n.ArticleTitle)</h4>
-                <p>@Html.DisplayFor(item => n.ArticleDescription)</p>
-                <hr />
-                <br />
-            </div>
-        }
+<br />
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+            @foreach (var n in Model)
+            {
+                <div class="col-md-8">
+                    @*<p>@Html.DisplayFor(item => n.DateUploaded)</p>*@
+                    <h4>@Html.DisplayFor(item => n.ArticleTitle)</h4>
+                    <p>@Html.DisplayFor(item => n.ArticleDescription)</p>
+                    <hr />
+                    <br />
+                </div>
+            }
+        </div>
+        <div class="col-md-4 imgContainer">
+            <img src="~/Images/Services/brakeRepair.jpg" class="img-responsive" style="background-attachment:local"/>
+            <br />
+            <img src="~/Images/Services/happyCustomer.jpg" class="img-responsive" style="background-attachment:local" />
+            <br />
+            <img src="~/Images/Services/oilChange.jpg" class="img-responsive" style="background-attachment:local" />
+            <br />
+            <img src="~/Images/Services/tireRepair.jpg" class="img-responsive" style="background-attachment:local" />
+            <br />
+        </div>
     </div>
 </div>
