Implemented and fixed several Nunit tests. Added additional project to the existing solution for Selenium integration testing.

--- a/FamilyAuto/Views/Home/Index.cshtml
+++ b/FamilyAuto/Views/Home/Index.cshtml
@@ -77,7 +77,7 @@
         </div>
         <br />
     </div>
-    @Html.ActionLink("SHOWROOM", "Showroom", new { Controller = "Vehicle" }, new { @class = "btn btn-primary btn-lg" })
+    @Html.ActionLink("SHOWROOM", "Showroom", new { Controller = "Vehicle" }, new { @class = "btn btn-primary btn-lg", @id = "Showroom" })
 </div>
 
 <div class="row">
