--- a/FamilyAuto/Views/SoldVehicles/Create.cshtml
+++ b/FamilyAuto/Views/SoldVehicles/Create.cshtml
@@ -41,7 +41,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.StaffId, "Sold By", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("StaffId", null, "", htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("StaffId", null, null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.StaffId, "", new { @class = "text-danger" })
             </div>
         </div>
